types-operators-controlflow
$ python3
Python 3.10.8 (v3.10.8:aaaf517424, Oct 11 2022, 10:14:40) [Clang 13.0.0 (clang-1300.0.29.30)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 10
10
>>> 0b10
2
>>> 0b1010
10
>>> 0o10
8
>>> 0x10
16
>>> int(3.5)
3
>>> int(-3.5)
-3
>>> int("496")
496
>>> int("1000", 3)
27
>>> int("10000", 3)
81
>>> 3.125
3.125
>>> 3e8
300000000.0
>>> 1.616e-35
1.616e-35
>>> float(7)
7.0
>>> float("1.618")
1.618
>>> float("nan")
nan
>>> float("inf")
inf
>>> float("-inf")
-inf
>>> 3.0 + 1
4.0
>>> None
>>> a = None
>>> a is None
True
>>> True
True
>>> False
False
>>> bool(42)
True
>>> bool(-1)
True
>>> bool(0.0)
False
>>> bool(0.207)
True
>>> bool(-1.1)
True
>>> bool(-1.117)
True
>>> bool([])
False
>>> bool([1,5,9])
True
>>> bool("")
False
>>> bool("Spam")
True
>>> bool(False)
False
>>> bool("False")
True
>>> bool("True")
True
>>> 
>>> 
>>> 
>>> Relational Operators
  File "<stdin>", line 1
    Relational Operators
               ^^^^^^^^^
SyntaxError: invalid syntax
>>> print(Relational Operators)
  File "<stdin>", line 1
    print(Relational Operators)
          ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> print("Relational Operators")
Relational Operators
>>> g = 20
>>> g == 20
True
>>> g == 13
False
>>> g != 13
True
>>> g != 20
False
>>> g < 30
True
>>> g <= 20
True
>>> g > 30
False
>>> g >= 20
True
>>> 
>>> 
>>> 
>>> 
>>> 
>>> print("Control FLow")
Control FLow
>>> if True:
...     print("It is true!")
... ^D
It is true!
>>>     print("It is true!")
KeyboardInterrupt
>>> if true
  File "<stdin>", line 1
    if true
           ^
SyntaxError: expected ':'
>>> if True:
...     print("It is true!")
... ^D
It is true!
>>> if True:
...     print("It is true!")
... 
It is true!
>>> if False:
...     print("It is true!")
...  
>>> if bool("eggs"):
...     print("Yes, please!!")
... 
Yes, please!!
>>> if "eggs":
...     print("Yes, please!!")
... 
Yes, please!!
>>> h = 42
>>> if h > 50
  File "<stdin>", line 1
    if h > 50
             ^
SyntaxError: expected ':'
>>> if h > 50:
...     print("Greater than 50")
... else:
...     print("50 or smaller")
... 
50 or smaller
>>> if h > 50:
...     print("Greater than 50")
... elif h < 20:
...     print("Less than 20")
... else:
...     print("Between 20 and 50")
... 
Between 20 and 50
>>> 
>>> 
>>> 
>>> print("While-loops")
While-loops
>>> c = 5
>>> while c != 0:
...     print(c)
...     c -= 1
... 
5
4
3
2
1
>>> while c:
...     print(c)
...     c -= 1
... 
>>> c = 5
>>> while c.
  File "<stdin>", line 1
    while c.
            ^
SyntaxError: invalid syntax
>>> while c:
...     print(c)
...     c -= 1
... 
5
4
3
2
1
>>> while True:
...     pass
... 
^CTraceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyboardInterrupt
>>> while True:
...     response = input()
...     if int(response) % 7 == 0:
...         break
... 
12
67
34
28
>>> 
